tests/errors/surf_lib_14.experr
gzip: unexpected end of deflate stream
